Sat May  7 22:43:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_fd_zero): remove redundant zero fill.

Sat May  7 22:38:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_fd_init): remove volatile qualifier.

Sat May  7 22:34:29 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_fd_init_copy): new internal api. It provide efficient
	  copy constructor semantics.
	* thread.c (do_select): use rb_fd_init_copy().

Sat May  7 15:18:06 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
	fix incorrect native_cond_signal call when deadlock was detected.

	* thread.c (lock_func): decrement cond_waiting if timeout was happen.

Sat May  7 18:28:37 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (USE_MONOTONIC_COND): check the availability
	  more strictly.

	* thread_pthread.h (rb_thread_cond_t): ditto.

Sat May  7 15:15:10 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	fix win32 native_cond_timedwait() makes SIGSEGV.

	* thread_win32.h (rb_thread_cond_struct): add prev field instead of last.
	  (ie cond_event_entry is now using double linked list instead of single)
	* thread_win32.c (cond_event_entry): add prev field.

	* thread_win32.c (__cond_timedwait): remove entry properly if timeout
	  was happen.

	* thread_win32.c (native_cond_signal): change for double linked list.
	* thread_win32.c (native_cond_broadcast): ditto.
	* thread_win32.c (native_cond_initialize): ditto.

Sat May  7 12:41:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
	fix mutex deadlock test hang-up.

	* thread_win32.c (abs_timespec_to_timeout_ms): fix 1000x calculation
	  mistake. (ie fix hang-up native_cond_timedwait())

Sat May  7 03:14:13 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	sleep_cond use monotonic time if possible.

	* thread_pthread.c (native_thread_init): change sleep_cond
	  attribute to monotonic.
	* thread_pthread.c (native_sleep): use native_cond_timeout().
